<?xml version="1.0"?>
<package format="3">
  <name>ricoh_theta_publisher</name>
  <version>0.1.0</version>
  <description>ROS 2 utilities for publishing RICOH THETA camera data.</description>

  <maintainer email="falahnzk.dev@gmail.com">Falah Naufal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
